testsuite/tests/rename/should_fail/T22581a_helper.hs
module T22581a_helper (T(MkT)) where

data T = MkT
